feat: modernize Spring monolith template